fix(ui5-list): remove unnecessary scrollbar in RTL for Multiselect mode (#4085)
Unnecessary scrollbar that appeared in RTL mode of ui5-list is now removed.

Fixes: #3947

--- a/packages/fiori/src/themes/InvisibleTextStyles.css
+++ b/packages/fiori/src/themes/InvisibleTextStyles.css
@@ -5,9 +5,5 @@
 	left: -1000px; /* ensure the invisible texts are never part of the viewport */
 	top: -1000px;
 	pointer-events: none;
-}
-
-[dir=rtl] .ui5-hidden-text {
-	left: auto;
-	right: -1000px;
+	font-size: 0;
 }
